# trello-clone

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  docker-compose.staging.yml  opencode.json  orca.yml
.claude/agents/: orca-design-feedback-loop-agent.md  orca-docs-agent.md  orca-implementation-agent.md  orca-planning-agent.md  orca-scoping-agent.md  orca-validation-agent.md  pragmatic-dev.md
.claude/commands/: orca-setup.md
.github/workflows/: ci.yml  cleanup-staging.yml  deploy-prod.yml  deploy-staging.yml
.orca/: pr-url  state.json  upstream-url  validation-report.md
backend/: Dockerfile  pyproject.toml
backend/src/app/: database.py  logging.py  main.py  models.py
backend/src/app/routers/: __init__.py  boards.py  cards.py  lists.py
backend/tests/: conftest.py  test_api_boards.py  test_api_cards.py  test_api_lists.py  test_conftest_fixtures.py  test_database.py  test_main.py  test_models.py  test_smoke.py
deploy/: setup-runners.sh
docs/agents/: design-feedback-loop.md  docs-update.md  implementation.md  planning.md  scoping.md  validation.md
docs/architecture/: README.md  adr-001-sqlite-persistence.md  adr-002-tanstack-query-state-management.md  adr-template.md
docs/conventions/: golden-principles.md
docs/feedback-loops/: TRE-31-feedback.md  TRE-35-feedback.md  TRE-36-feedback.md  TRE-37-feedback.md  TRE-38-feedback.md  TRE-39-feedback.md  TRE-40-feedback.md
e2e/: smoke.sh
frontend/: .cta.json  Dockerfile  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  server.js  vite.config.ts
(+82 files in other folders)
